fix slide flickering

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -4,3 +4,11 @@
 	text-decoration: none;
 	box-sizing: border-box;
 }
+
+.preload * {
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
+	transition: none !important;
+}
