--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,10 +6,22 @@ html {
 }
 
 .images {
-	height: 100vh;
+	position: relative;
 	display: flex;
 	align-items: center;
+	height: 100vh;
+}
+.image {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
 	transition: 0.75s ease-in-out;
+	opacity: 0;
+}
+.image.enable {
+	opacity: 1;
 }
 .images .content {
 	background-color: #fff;
@@ -40,14 +52,16 @@ html {
 	transition: 0.3s ease-in-out;
 	cursor: pointer;
 }
+.disabled {
+	opacity: 0.5;
+	cursor: default;
+}
 .go.left {
 	position: absolute;
 	left: 90px;
-	transform: rotate(180deg) translateX(50%);
 }
 .go.right {
 	position: absolute;
 	right: 90px;
-	transform: translateX(50%);
 }
 /* SLIDE CONTROLLER */
